# mpesa-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
.well-known/: mcp.json
src/mpesa_mcp/: __init__.py  server.py
tests/: test_smoke.py
