[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpesa-mcp"
version = "0.1.3"
description = "MCP server for M-Pesa (Safaricom Daraja) and Africa's Talking APIs"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
authors = [
    {name = "Gabriel Mahia", email = "contact@aikungfu.dev"},
]
keywords = [
    "mcp", "model-context-protocol", "mpesa", "m-pesa", "safaricom",
    "daraja", "africastalking", "kenya", "africa", "fintech", "payments", "sms"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Communications :: Telephony",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "africastalking>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.3.0"]

[project.scripts]
mpesa-mcp = "mpesa_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/mpesa-mcp"
Repository = "https://github.com/gabrielmahia/mpesa-mcp"
"Bug Tracker" = "https://github.com/gabrielmahia/mpesa-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-height = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
